--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contador</title>
+    <title>CronometroJSV</title>
 </head>
 <body>
     <div class="main-div">        
@@ -17,7 +17,7 @@
         <p style="font-size: 12px;">UM CRONÔMETRO SIMPLES FEITO COM JAVASCRIPT PURO.</p>
     </div>
     <footer>
-        <span><a href="https://github.com/matheus55391">GITHUB</a></span>
+        <span><a href="https://github.com/matheus55391">GITHUB @matheus55391</a></span>
     </footer>
     <script src="./main.js"></script>
 </body>
